Menu: Fix alignment of current menu item highlight
On short screens, the menu item border is visibly offset (too tall) by 2px, and on tall screens it's very slightly too short by about half a pixel. This fixes the issue by using the specific padding offsets used by the non-current `a`s.

--- a/mu-plugins/blocks/global-header-footer/postcss/header/menu.pcss
+++ b/mu-plugins/blocks/global-header-footer/postcss/header/menu.pcss
@@ -36,7 +36,7 @@
 			padding: 0;
 
 			& .wp-block-navigation__container {
-				line-height: 1em;
+				line-height: 1;
 				width: 100%;
 			}
 
@@ -54,6 +54,7 @@
 		padding: 0 0 var(--wp--custom--margin--vertical) 0;
 		row-gap: 0;
 		column-gap: 0;
+		line-height: 24px;
 
 		@media (--tablet) {
 			padding-bottom: 0;
@@ -73,11 +74,11 @@
 				@media (--tablet) {
 					border-bottom: var(--active-menu-item-border-height) solid #7b90ff;
 					border-left: none;
-					padding-bottom: calc(var(--wp--style--block-gap) + var(--active-menu-item-border-height, 0px));
+					padding-bottom: calc(33px - var(--active-menu-item-border-height, 0px));
 				}
 
 				@media (--short-screen) {
-					padding-bottom: calc(20px - var(--active-menu-item-border-height));
+					padding-bottom: calc(18px - var(--active-menu-item-border-height, 0px));
 				}
 			}
 
